--- a/Store/templates/index.html
+++ b/Store/templates/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <h2>Bem vind{{artigo}} {{ nome }}!</h2>
+    <h2>Seja bem vind{{ artigo }} {{ nome }}</h2>
 </body>
 </html>
