--- a/Store/templates/categorias.html
+++ b/Store/templates/categorias.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Categorias</title>
 </head>
 <body>
-    <h1>Departamentos</h1>
+    <h1>Categorias</h1>
     <ul>
-        {% for departamento in departamentos %}
-        <li>{{departamento}}</li>
+        {% for categ in categorias %}
+        <li>[{{ categ.departamento }}] {{ categ.nome }}</li>
         {% endfor %}
 
     </ul>
- </body>
+    
+</body>
 </html>
