--- a/Store/templates/departamentos.html
+++ b/Store/templates/departamentos.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Departamentos</title>
 </head>
 <body>
-    <h1>Departamentos</h1>
+    <h1>Senac Store</h1>
     <ul>
-        {% for departamento in departamentos %}
-        <li>{{departamento}}</li>
+        {% for depto in departamentos  %}
+        <li>{{ depto.nome }}</li>
         {% endfor %}
-
     </ul>
- </body>
+    
+</body>
 </html>
