--- a/Store/templates/produtos.html
+++ b/Store/templates/produtos.html
@@ -14,6 +14,8 @@
             <th>Categoria</th>
             <th>Preço</th>
             <th>Estoque</th>
+            <th>Img do Produto</th>
+            <th></th>
         </tr>
         {% for prod in produtos %}
         <tr>
@@ -21,6 +23,11 @@
             <td>{{ prod.categoria }}</td>
             <td>R$ {{ prod.preco}}</td>
             <td>{{ prod.estoque}}</td>
+            <td><img src="{{ prod.imagem.url }}" width="80"></td>
+            <td>{% if prod.lancamento == True %}
+                    Lançamento!!
+                {% endif %}
+            </td>
         </tr>
         {% endfor %}
         
