--- a/Store/templates/index.html
+++ b/Store/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -5,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Inicial</title>
+    <link rel="stylesheet" type="text/css" href="{% static '/css/estilos.css' %}">
 </head>
 <body>
     <h1>Hello World!</h1>
