--- a/Store/templates/produtos.html
+++ b/Store/templates/produtos.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -5,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos</title>
+    <link rel="stylesheet" type="text/css" href="{% static '/css/estilos.css' %}">
 </head>
 <body>
     <h1>Produtos</h1>
-    <table border="1">
+    <table border="2">
         <tr>
             <th>Nome</th>
             <th>Categoria</th>
