--- a/Store/templates/index.html
+++ b/Store/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static '/css/estilos.css' %}">
 </head>
 <body>
+    {% include 'includes/topo.html' %}
     <h1>Hello World!</h1>
     <h2>Seja bem vind{{ artigo }} {{ nome }}</h2>
 </body>
