--- a/Store/templates/produto_detalhes.html
+++ b/Store/templates/produto_detalhes.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static '/css/estilos.css' %}">
 </head>
 <body>
+    {% include 'includes/topo.html' %}
     <h5>{{produto.categoria.departamento.nome}} >> {{produto.categoria.nome}}</h5>
     <h1>{{produto.nome}}</h1>
     <img src="{{produto.imagem.url}}" width="200">
