--- a/Store/templates/Includes/Topo.html
+++ b/Store/templates/Includes/Topo.html
@@ -1,9 +1,14 @@
 {%load static%}
 <div id="topo"> 
-    <img src="{% static 'img/logo_senac.jpg' %}" width = "150">
+    <a href="{% url 'index' %}">
+        <img src="{% static 'img/logo_senac.jpg' %}" width = "150">
+    </a>
     <ul>
-        <li> Departamentos</li>
-        <li> Contato </li>
-        <li> Sobre a empresa </li>
+        <li><a href="{% url 'departamentos' %}">
+            Departamentos</a></li>
+        <li><a href="{% url 'contato' %}"> 
+            Contato </a></li>
+        <li><a href="{% url 'institucional' %}">
+            Sobre a empresa </a></li>
     </ul>
 </div>
